Bug 76078 - FILESAVE: crash while saving .docx file containing only opening brace
Summary: FILESAVE: crash while saving .docx file containing only opening brace
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Formula Editor (show other bugs)
Version:
(earliest affected)
3.5.7.2 release
Hardware: All All
: medium normal
Assignee: Dinesh
URL:
Whiteboard: target:4.3.0 target:4.2.4
Keywords: regression
Depends on:
Blocks:
 
Reported: 2014-03-12 13:04 UTC by Dinesh
Modified: 2014-03-13 16:13 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
DOCX file contain one equation which has only one opening curly brace and no closing curly brace. (40.06 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-03-12 13:04 UTC, Dinesh
Details
error dialog on Win7x64 (11.42 KB, image/png)
2014-03-13 06:28 UTC, tommy27
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dinesh 2014-03-12 13:04:25 UTC
Created attachment 95658 [details]
DOCX file contain one equation which has only one opening curly brace and no closing curly brace.

LO Crashes while saving the docx file containing only opening brace and not having closing brace in an equation.

Steps to reproduce:
1. Open the file in LibreOffice
2. Click File -> Save As (Microsoft Word 2007/2010 (.docx))
3. Open saved file in MS Office
Expected:
File should save without any crash.
Actual:
LO crashes while saving the file.
Comment 1 Jorendc 2014-03-12 16:55:42 UTC
I fail to reproduce a crash when saving attached document as .docx or by reopening it.

Tested using Mac OSX 10.9 with LibreOffice Version: 4.3.0.0.alpha0+
Build ID: 1b6e87fc232e78790d45a54b7a4ac7fe02d2c587
TinderBox: MacOSX-x86@49-TDF, Branch:master, Time: 2014-03-08_23:04:18

@Dinesh: any chance you can retest with an up to date build? (as you can see above, I did test with a version of March 8th.

Kind regards,
Joren
Comment 2 Dinesh 2014-03-12 18:00:14 UTC
@Jorendc : I tried to test it again like you mentioned. I could reproduce the issue again. I tried it on Ubuntu 12.04 ( Build id : e5cb1989520baf321961dbb82437d1b00a2a499c ).

I will be attaching herewith the original document as well. Can you please confirm the issue.

P.S : the previously attached document was the optimized document.
Comment 3 Jorendc 2014-03-12 18:30:59 UTC
(In reply to comment #2)
> I will be attaching herewith the original document as well. Can you please
> confirm the issue.
I think the original document is already attached (file name is 2120112713-Orig.docx).

> P.S : the previously attached document was the optimized document.
Can you please attach this optimized document as well (looks like there is no new attachment created).

Thanks!
Joren
Comment 4 Dinesh 2014-03-13 05:45:56 UTC
Comment on attachment 95658 [details]
DOCX file contain one equation which has only one opening curly brace and no closing curly brace.

The original file size is too large, getting error while attaching the file.
Comment 5 tommy27 2014-03-13 06:28:57 UTC
Created attachment 95689 [details]
error dialog on Win7x64

test file crashes LibO 4.3 alpha under Win7x64

and shows the attached error dialog window

Build ID: a53577e6ff3629c4e9219616960d89eea9463593
TinderBox: Win-x86@39, Branch:master, Time: 2014-02-24_01:49:31
Comment 6 tommy27 2014-03-13 06:32:07 UTC
no crash with 4.1.5.3 and 4.2.1.1
regression
Comment 7 Michael Stahl 2014-03-13 13:50:15 UTC
actually crashes with the same assertion in 3.5.0 already.
"regression" is arguable since 3.4 can't even import the formula.
Comment 8 Michael Stahl 2014-03-13 14:09:42 UTC
bugzilla hates me, fill out that field another time...
Comment 9 Jorendc 2014-03-13 14:12:40 UTC
(In reply to comment #8)
> bugzilla hates me, fill out that field another time...

Blame Bugzilla with bug 64219 ;-)
Comment 10 Commit Notification 2014-03-13 15:50:55 UTC
Dinesh Patil committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ade1641ab632565820ede720b6151435aca4dd78

fdo#76078: LO Crashes while saving the docx file containing only opening brace



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2014-03-13 16:10:00 UTC
Dinesh Patil committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cde6d800698522a804dc8f82c158ce7e0c3e05f5&h=libreoffice-4-2

fdo#76078: LO Crashes while saving the docx file containing only opening brace


It will be available in LibreOffice 4.2.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.